# SportiqEventAutomatization

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
app/: __main__.py
app/config/: settings.py
app/db/: __init__.py  manager.py  sql.py  status.py
app/mq/: __init__.py  manager.py  type.py
